fix: поправил роуты и бургер меню в кабинете
